# learnopengl_vs

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bkp  README.md  Source.cpp  compile_flags.txt  learnopengl.sln  learnopengl.vcxproj  learnopengl.vcxproj.filters  setup.bat  setup.sh
res/shaders/: cube.fs  cube.vs  light.fs  light.vs
src/: Core.cpp  Core.h  MyGui.cpp  MyGui.h  Source.cpp  Timer.cpp  Timer.h  VSync.cpp  VSync.h  Window.cpp  Window.h
src/include/learnopengl/: camera.h
